[project]
name = "triangler-starlette"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "PattyC", email = "patrickcoffey91@gmail.com" }
]
dependencies = [
    "starlette>=0.38.5",
    "jinja2>=3.1.4",
    "uvicorn[standard]>=0.30.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
